themes/font.less
@import "variables";

@font-face {
  font-family: 'heyui';
  src:  url('@{icomoon-font-path}/heyui.eot?3ge0g8');
  src:  url('@{icomoon-font-path}/heyui.eot?3ge0g8#iefix') format('embedded-opentype'),
    url('@{icomoon-font-path}/heyui.ttf?3ge0g8') format('truetype'),
    url('@{icomoon-font-path}/heyui.woff?3ge0g8') format('woff'),
    url('@{icomoon-font-path}/heyui.svg?3ge0g8#heyui') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class^="@{icon-prefix}"], [class*=" @{icon-prefix}"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'heyui' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  font-size: inherit;
  display: inline-block;
  vertical-align: middle;
  // vertical-align: -17%;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


.h-icon-location {
  &:before {
    content: @h-icon-location;
  }
}
.h-icon-edit {
  &:before {
    content: @h-icon-edit;
  }
}

.h-icon-calendar {
  &:before {
    content: @h-icon-calendar;
  }
}
.h-icon-loading {
  &:before {
    content: @h-icon-loading;
  }
  animation: ani-load-loop 1s linear infinite;
}
.h-icon-spinner {
  &:before {
    content: @h-icon-spinner;
  }
  animation: ani-load-loop 1s linear infinite;
}
.h-icon-completed {
  &:before {
    content: @h-icon-completed;
  }
}
.h-icon-refresh {
  &:before {
    content: @h-icon-refresh;
  }
}
.h-icon-home {
  &:before {
    content: @h-icon-home;
  }
}
.h-icon-user {
  &:before {
    content: @h-icon-user;
  }
}
.h-icon-task {
  &:before {
    content: @h-icon-task;
  }
}
.h-icon-message {
  &:before {
    content: @h-icon-message;
  }
}
.h-icon-fullscreen {
  &:before {
    content: @h-icon-fullscreen;
  }
}
.h-icon-menu {
  &:before {
    content: @h-icon-menu;
  }
}
.h-icon-link {
  &:before {
    content: @h-icon-link;
  }
}
.h-icon-trash {
  &:before {
    content: @h-icon-trash;
  }
}
.h-icon-users {
  &:before {
    content: @h-icon-users;
  }
}
.h-icon-complete {
  &:before {
    content: @h-icon-complete;
  }
}
.h-icon-bell {
  &:before {
    content: @h-icon-bell;
  }
}
.h-icon-search {
  &:before {
    content: @h-icon-search;
  }
}
.h-icon-star {
  &:before {
    content: @h-icon-star;
  }
}
.h-icon-star-on {
  &:before {
    content: @h-icon-star-on;
  }
}
.h-icon-setting {
  &:before {
    content: @h-icon-setting;
  }
}
.h-icon-info {
  &:before {
    content: @h-icon-info;
  }
}
.h-icon-warn {
  &:before {
    content: @h-icon-warn;
  }
}
.h-icon-success {
  &:before {
    content: @h-icon-success;
  }
}
.h-icon-error {
  &:before {
    content: @h-icon-error;
  }
}
.h-icon-close {
  &:before {
    content: @h-icon-close;
  }
}
.h-icon-down {
  &:before {
    content: @h-icon-down;
  }
}
.h-icon-left {
  &:before {
    content: @h-icon-left;
  }
}
.h-icon-top {
  &:before {
    content: @h-icon-top;
  }
}
.h-icon-right {
  &:before {
    content: @h-icon-right;
  }
}
.h-icon-inbox {
  &:before {
    content: @h-icon-inbox;
  }
}
.h-icon-outbox {
  &:before {
    content: @h-icon-outbox;
  }
}
.h-icon-plus {
  &:before {
    content: @h-icon-plus;
  }
}
.h-icon-minus {
  &:before {
    content: @h-icon-minus;
  }
}
.h-icon-check {
  &:before {
    content: @h-icon-check;
  }
}

.h-icon-upload {
  &:before {
    content: @h-icon-upload;
  }
}

.h-icon-github {
  &:before {
    content: @h-icon-github;
  }
}

